working on the statue page

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -17,7 +17,7 @@
       <div id="header" class="box header"></div>
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
-        <h2 class="page_heading">Statues</h2>
+        <h2 class="page_heading">Statues Summary</h2>
         <table>
           <tr>
             <th>Name</th>
@@ -27,92 +27,92 @@
           <tr>
             <td><a href="#ouch">Ouch Statue</a></td>
             <td>Shaaga</td>
-            <td>Deals 18 damage to all characters within a 1 tile radius each turn.</td>
+            <td class="text_left">Deals 18 damage to all characters within a 1 tile radius each turn.</td>
           </tr>
           <tr>
             <td><a href="#pierce">Pierce Statue</a></td>
             <td>Horse Ronin</td>
-            <td></td>
+            <td class="text_left">Thrown items will pierce through walls and objects.<br>If a Kengo monster disarms you while this statue is present, the equipment will be lost.</td>
           </tr>
           <tr>
             <td><a href="#riceball">Riceball Statue</a></td>
             <td>Nigiri Morph</td>
-            <td></td>
+            <td class="text_left">Defeated enemies turn into Riceballs. Not found in Road to the End or Sealed Room.</td>
           </tr>
           <tr>
             <td><a href="#gitan">Gitan Statue</a></td>
             <td>Gamarra</td>
-            <td></td>
+            <td class="text_left">Defeated enemies turn into Gitan. Not found in Sealed Room.</td>
           </tr>
           <tr>
             <td><a href="#trip">Trip Statue</a></td>
             <td>Dosukoi</td>
-            <td></td>
+            <td class="text_left">Occasionally makes all characters in the room trip. Not found in Sealed Room.</td>
           </tr>
           <tr>
             <td><a href="#10_damage">10 Damage Statue</a></td>
             <td>Mamel</td>
-            <td></td>
+            <td class="text_left">Converts all damage dealt in the room to 10 points.</td>
           </tr>
           <tr>
             <td><a href="#identify">Identify Statue</a></td>
             <td>N'dubba</td>
-            <td></td>
+            <td class="text_left">Identify items by picking them up, or by inserting / removing them from pots or Mamo.</td>
           </tr>
           <tr>
             <td><a href="#bomber">Bomber Statue</a></td>
             <td>Droplet Ninja</td>
-            <td></td>
+            <td class="text_left">Defeated enemies will explode, dealing damage equal to a Big Landmine.</td>
           </tr>
           <tr>
             <td><a href="#gravity">Gravity Statue</a></td>
             <td>Golem</td>
-            <td></td>
+            <td class="text_left">Only found in Halfway Well. Flying monsters can be trapped when this is present.</td>
           </tr>
           <tr>
             <td><a href="#explosion">Explosion Statue</a></td>
             <td>Patient Bag</td>
-            <td></td>
+            <td class="text_left">The statue explodes when destroyed, dealing damage equal to a Big Landmine.</td>
           </tr>
           <tr>
             <td><a href="#hoarder">Hoarder Statue</a></td>
             <td>King Tusker</td>
-            <td></td>
+            <td class="text_left">Cannot throw or place items when this statue is present.</td>
           </tr>
           <tr>
             <td><a href="#scout">Scout Statue</a></td>
             <td>Pumphantasm</td>
-            <td></td>
+            <td class="text_left">Displays the locations of monsters and items on the map for the current floor.</td>
           </tr>
           <tr>
             <td><a href="#stone_toss">Stone Toss Statue</a></td>
             <td>Porky</td>
-            <td></td>
+            <td class="text_left">Occasionally throws stones with 30 attack power at a random target.</td>
           </tr>
           <tr>
             <td><a href="#sleep">Sleep Statue</a></td>
             <td>Sheep Priest</td>
-            <td></td>
+            <td class="text_left">Occasionally puts all characters in the room to sleep.</td>
           </tr>
           <tr>
             <td><a href="#knockback">Knockback Statue</a></td>
             <td>Stone Beast</td>
-            <td></td>
+            <td class="text_left">Characters in the room will receive 5 tiles of knockback when hit by regular attacks.</td>
           </tr>
           <tr>
             <td><a href="#no_magic">No Magic Statue</a></td>
             <td>Escargon</td>
-            <td></td>
+            <td class="text_left">Nullifies all magic in the room. (Staves, scrolls, etc.)</td>
           </tr>
           <tr>
             <td><a href="#decoy">Decoy Statue</a></td>
             <td>Snacky</td>
-            <td></td>
+            <td class="text_left">Monsters prioritize attacking this statue over Shiren.</td>
           </tr>
           <tr>
             <td><a href="#sturdy_trap">Sturdy Trap Statue</a></td>
             <td>Traproid</td>
-            <td></td>
+            <td class="text_left">Only found in Halfway Well. Traps inside the room will never break.</td>
           </tr>
         </table>
         <h2>What are Statues?</h2>
