check statue image size

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -275,7 +275,7 @@
           </div>
           <h3 id="identify">Identify Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/identify.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/identify.png" width="70" height="107" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
