working on the statue page

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -270,124 +270,124 @@
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/scout.png" width="70" height="107" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc">Displays locations of monsters and items on the map as if you have a Scout Bracelet equipped.<br>This effect will be granted anywhere on the current floor, no matter where the statue is located.<br><br>One of the best statue effects to have around, since it lets you detect shops and Monster Houses.<br>Use a Knockback Staff or Pull Staff to relocated it to a safe spot where monsters won't destroy it.</p>
+            <p class="item_desc">Displays locations of monsters and items on the map as if you have a Scout Bracelet equipped.<br>This effect will be granted anywhere on the current floor, no matter where the statue is located.<br><br>Great statue effect to have around, since it lets you detect shops and Monster Houses.<br>Use a Knockback Staff or Pull Staff to relocated it to a safe spot where monsters won't destroy it.</p>
             </div>
           </div>
           <h3 id="identify">Identify Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/identify.png"alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/identify.png" width="80" height="101" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Items are identified when they're picked up, similar to a Specialty Riceball's identification effect.<br>Only the pot will be identified if a pot with unidentified items inside is picked up.<br>A Wet Scroll will remain as Wet Scroll when picked up.<br><br>One of the best statue effects with zero downsides.<br>If you're already carrying some unidentified items, you can simply <br>place them on the ground and then pick them up again to identify them.<br>Particularly great if you come across one early on inside the Road to the End dungeon.</p>
             </div>
           </div>
           <h3 id="10_damage">10 Damage Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/10_damage.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/10_damage.png" width="70" height="79" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">All damage received by Shiren and monsters will be a fixed 10 points.<br>This includes even sources such as Quarter Staff, Counter Shield, and Landmine explosions.<br>However, Poison Grass remains at 5 points of damage,<br>and Landmine type explosions will still one-shot monsters.<br><br>Useful when Shiren has low attack early game, or when inside the Halfway Well dungeon.<br>Can be used to one-shot a Cave Mamel at the beginning of the Road to the End dungeon.<br>That said, this statue becomes a liability the deeper you progress, since it increases<br>the number of hits needed to defeat monsters with troublesome special attacks.<br>In particular, it greatly increases the risk of Rancor and Intolerable slugs dividing.<br>It's best to destroy it right away when you don't need its effect.</p>
             </div>
           </div>
           <h3 id="knockback">Knockback Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/knockback.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/knockback.png" width="84" height="117" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="decoy">Decoy Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/decoy.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/decoy.png" width="70" height="69" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="ouch">Ouch Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/ouch.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/ouch.png" width="110" height="125" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="stone_toss">Stone Toss Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/stone_toss.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/stone_toss.png" width="78" height="119" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="explosion">Explosion Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/explosion.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/explosion.png" width="94" height="131" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="hoarder">Hoarder Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/hoarder.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/hoarder.png" width="96" height="129" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="sleep">Sleep Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/sleep.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/sleep.png" width="78" height="114" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="no_magic">No Magic Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/no_magic.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/no_magic.png" width="74" height="102" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="pierce">Pierce Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/pierce.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/pierce.png" width="92" height="134" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="bomber">Bomber Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/bomber.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/bomber.png" width="72" height="115" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="trip">Trip Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/trip.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/trip.png" width="92" height="108" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="gitan">Gitan Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/gitan.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/gitan.png" width="78" height="88" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="riceball">Riceball Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/riceball.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/riceball.png" width="78" height="112" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="sturdy_trap">Sturdy Trap Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/sturdy_trap.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/sturdy_trap.png" width="94" height="139" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
           </div>
           <h3 id="gravity">Gravity Statue</h3>
           <div class="detail-entry">
-            <img class="img_statue" src="/shiren2/image/statue/gravity.png" alt="statue">
+            <img class="img_statue" src="/shiren2/image/statue/gravity.png" width="102" height="119" alt="statue">
             <div class="detail-section-1">
             <p class="item_desc"></p>
             </div>
