working on the statue page

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -291,14 +291,14 @@
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/knockback.png" width="84" height="117" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Characters hit by regular attacks will receive 5 tiles of knockback when this statue is present.<br>Characters that bump into another character due to the knockback will receive 5 damage.<br>If the character is defeated as a result, the one who dealt the knockback<br>will be treated as the one that defeated that character.<br>Characters with fast movement or multiple attacks will stop after dealing knockback.<br>Counter Shield and Samuraidon's damage reflection doesn't take effect when knocked away.<br><br>Generally a positive statue, since it lets you defeat monsters without receiving counter attacks.<br>It can also be used to escape situations by having a monster intentionally knock you away.<br>The knockback takes effect when receving damage, so it can be used to reduce the damage<br>from multi-attack monsters like Lashaaga as well by canceling subsequent hits.</p>
             </div>
           </div>
           <h3 id="decoy">Decoy Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/decoy.png" width="70" height="69" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Monsters ignore Shiren and prioritize attacking this statue when present.<br>Archdragon and Porky family monsters will use special attacks at this statue if Shiren is not in view.<br>Unlike defeating a Snacky, the monster that destroys this statue will not level up.<br><br>It has lower durability than most statues, so it's not as useful as it may first appear.<br>Often destroyed by monsters before you get the chance to come across it.</p>
             </div>
           </div>
           <h3 id="ouch">Ouch Statue</h3>
