--- a/html/index.html
+++ b/html/index.html
@@ -13,12 +13,86 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header"></div>
-      <div id="sidebar" class="box sidebar"></div>
+      <div id="header" class="box header">
+        <div>
+          <img src="/shiren2/image/site/koppa_eating.png" style="vertical-align: middle;" width="28" height="auto"><span>Shark | Shiren 2 Wiki</span>
+        </div>
+      </div>
+      <div id="sidebar" class="box sidebar">
+        <div class="sidebar-menu">
+          <div class="sidebar-category">Items</div>
+          <div class="sidebar-links">
+            ┣ <a href="/shiren2/html/item/weapon.html">Weapons</a>
+            / <a href="/shiren2/html/item/shield.html">Shields</a><br>
+            ┣ <a href="/shiren2/html/item/bracelet.html">Bracelets</a>
+            / <a href="/shiren2/html/item/food.html">Food</a>
+            / <a href="/shiren2/html/item/grass.html">Grass</a><br>
+            ┣ <a href="/shiren2/html/item/staff.html">Staves</a>
+            / <a href="/shiren2/html/item/scroll.html">Scrolls</a>
+            / <a href="/shiren2/html/item/pot.html">Pots</a><br>
+            ┣ <a href="/shiren2/html/item/projectile.html">Projectiles</a>
+            / <a href="/shiren2/html/item/material.html">Materials</a><br>
+            ┣ <a href="/shiren2/html/item/decoration.html">Decorations</a>
+            / <a href="/shiren2/html/item/other.html">Other</a><br>
+            ┗ <a href="/shiren2/html/item/price_chart.html">Price Chart</a>
+          </div>
+          <div class="sidebar-category">Dungeons</div>
+          <div class="sidebar-links">
+            <div class="sidebar-sub-category">Story</div>
+            ┣ <a href="/shiren2/html/dungeon/small_valley.html">Small Valley</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shuten_trail_easy.html">Shuten Trail Easy</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shuten_trail_mid.html">Shuten Trail Mid</a><br>
+            ┣ <a href="/shiren2/html/dungeon/shuten_trail_hard.html">Shuten Trail Hard</a><br>
+            ┗ <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>
+          </div>
+          <div class="sidebar-sub-category">Post-game</div>
+          <div class="sidebar-links-sub">
+            ┣ <a href="/shiren2/html/dungeon/hidden_hole.html">Hidden Hole</a><br>
+            ┣ <a href="/shiren2/html/dungeon/hidden_hole_b.html">Hidden Hole (B)</a><br>
+            ┣ <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a><br>
+            ┣ <a href="/shiren2/html/dungeon/halfway_well.html">Halfway Well</a><br>
+            ┗ <a href="/shiren2/html/dungeon/road_to_the_end.html">Road To The End</a>
+          </div>
+          <div class="sidebar-category">System</div>
+          <div class="sidebar-links">
+            ┣ <a href="/shiren2/html/system/basics.html">Basics</a><br>
+            ┣ <a href="/shiren2/html/system/seal.html">Seals</a>
+            / <a href="/shiren2/html/system/monster.html">Monsters</a><br>
+            ┣ <a href="/shiren2/html/system/castle.html">Castle</a>
+            / <a href="/shiren2/html/system/ally.html">Allies</a><br>
+            ┣ <a href="/shiren2/html/system/trap.html">Traps</a>
+            / <a href="/shiren2/html/system/statue.html">Statues</a><br>
+            ┣ <a href="/shiren2/html/system/golden_interval.html">Golden Intervals</a><br>
+            ┣ <a href="/shiren2/html/system/monster_kingdom.html">Monster Kingdom</a><br>
+            ┗ <a href="/shiren2/html/system/monster_house.html">Monster House</a>
+          </div>
+          <div class="sidebar-category">Playing</div>
+          <div class="sidebar-links">
+            <div class="sidebar-sub-category">Techniques</div>
+            ┣ <a href="/shiren2/html/playing/basics.html">Basics</a>
+            / <a href="/shiren2/html/playing/advanced.html">Advanced</a><br>
+            ┗ <a href="/shiren2/html/playing/stealing.html">Stealing</a>
+          </div>
+          <div class="sidebar-sub-category">Other</div>
+          <div class="sidebar-links-sub">
+            ┣ <a href="/shiren2/html/playing/faq.html">FAQ</a>
+            / <a href="/shiren2/html/playing/secret_phrases.html">Secret Phrases</a><br>
+            ┣ <a href="/shiren2/html/playing/gallery.html">Gallery</a>
+            / <a href="/shiren2/html/playing/exp_stat.html">Exp &amp; Stats</a><br>
+            ┗ <a href="/shiren2/html/playing/restricted_play.html">Restricted Play</a>
+          </div>
+          <div class="sidebar-category">Links</div>
+          <div class="sidebar-links">
+            ┗ <a href="https://www.pj64-emu.com/public-releases">Project64 (Emulator)</a>
+          </div>
+        </div>
+      </div>
       <div id="content" class="box content">
         <div>
-          <p>Welcome! This is wiki site for Shiren 2 (Nintendo 64) to accompany the English patch.</p>
-          </p>
+          <p>Welcome! This is a strategy / wiki site for Shiren 2 (Nintendo 64)<br>to accompany the English patch by ozidual and sharksnack.</p>
+          <p>It's still a work-in-progress, so some pages don't exist yet, and others may change in time.<br>Feel free to follow the project <a href="https://krikzz.com/forum/index.php?topic=8495.0">here</a>.</p>
+          <p>A significant portion of the information found on this site is translated from the <a href="http://shiren2.lsx3.com">Japanese wiki</a>,<br>along with the addition of my own personal notes.</p>
+          <p></p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
