update header to remove 'shark'

--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
       </div>
       <div id="content" class="box content">
         <div>
-          <p>Welcome! This is a strategy / wiki site for Shiren 2 (Nintendo 64)<br>to accompany the English patch by ozidual and sharksnack.</p>
+          <p>Welcome! This is a strategy / wiki site for Shiren 2 (Nintendo 64)<br>to accompany the English patch.</p>
           <p>It's still a work-in-progress, so some pages don't exist yet, and others may change in time.<br>Feel free to follow the project <a href="https://krikzz.com/forum/index.php?topic=8495.0">here</a>.</p>
           <p>A significant portion of the information found on this site is translated from the <a href="http://shiren2.lsx3.com">Japanese wiki</a>,<br>along with the addition of my own personal notes.</p>
           <p></p>
