This is why I don't like duplication

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <div id="header" class="box header">
         <div>
-          <img src="/shiren2/image/site/koppa_eating.png" style="vertical-align: middle;" width="28" height="auto"><span>Shark | Shiren 2 Wiki</span>
+          <img src="/shiren2/image/site/koppa_eating.png" style="vertical-align: middle;" width="28" height="auto"><span>Shiren 2 Wiki</span>
         </div>
       </div>
       <div id="sidebar" class="box sidebar">
