add a space between header image and text

--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,3 @@
 <div>
-<img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;">
-<span>Shiren 2 Wiki</span>
+<img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;"> <span>Shiren 2 Wiki</span>
 </div>
