working on the statue page

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -326,35 +326,35 @@
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/hoarder.png" width="96" height="129" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Prevents items from being placed or thrown.<br>Shiren and monsters won't drop items if they trip when this statue is present.<br>Monsters that throw or shoot items will effectively be sealed,<br>including Kengo family monsters' equipment disarming special attack.<br>However, monsters can still drop items when defeated.<br><br>It can be beneficial in the sense of sealing monsters with ranged attacks or Kengo monsters<br>from knocking your equipment away, but there aren't many opportunities to make use of it.<br>Unlike No Magic or Pierce statues, it doesn't really cause costly accidents for Shiren.</p>
             </div>
           </div>
           <h3 id="sleep">Sleep Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/sleep.png" width="78" height="114" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Spreads sleeping gas in intervals, putting all characters in the room to sleep for 5 turns.<br>The statue only spreads gas after 6 or more turns have elapsed since the previous activation.<br>Characters inside walls won't fall asleep, and Shiren will be exempt if he has the Trapper status.<br><br>You'll be able to move a minimum of 1 turn after waking up before it spreads gas again,<br>but it can be annoying since it slows down the pace of the game.<br>A monster entering the room while you're asleep can be quite dangerous, so it's best to<br>destroy the statue as soon as possible, ideally using a Fire Staff to do so in a single turn.</p>
             </div>
           </div>
           <h3 id="no_magic">No Magic Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/no_magic.png" width="74" height="102" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Nullifies staff and scroll effects, including thrown staves and magic bolts from outside the room.<br>Sanctuary and Explosion scrolls placed on the ground will be nullified as well.<br>However, Balance Staff still prevents tripping, and Squid Sushi Scroll can still restore fullness.<br><br>It can effectively seal King Tusker family monsters, but the negatives outweigh the positives.<br>In particular, it greatly limits your options if you're surrounded by multiple enemies,<br>so it's best to keep an escape item like Warp Grass on hand in case you run into this statue.<br><br>Since it nullifies Knowledge Staff, this in-game description cannot be seen during normal play:<br><br>[No Magic Statue]<br>Scroll and staff effects in<br>the room will be nullified.<br>Applies to both you<br>and monsters.</p>
             </div>
           </div>
           <h3 id="pierce">Pierce Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/pierce.png" width="92" height="134" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Thrown items will pierce through objects and walls, like having a Pierce Bracelet equipped.<br>Items also pierce through Reflect Shield and Tonosamadon's ability to reflect items.<br>Applies to enemies as well, but no effect on items that are thrown in an arc,<br>such as Kappa family monsters using their special attack to throw items.<br><br>This statue likely has the highest potential for causing accidents.<br>From losing items by throwing them at Mixers to losing equipment from Kengo disarming you,<br>there's a lot to watch out for when a Pierce Statue is present.<br>Shiren 2 doesn't have a command to take a look around the room,<br>so be cautious of unknown statues in the room that are outside of your view.<br>It may be best to choose actions based on the assumption that the statue is a Pierce Statue.</p>
             </div>
           </div>
           <h3 id="bomber">Bomber Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/bomber.png" width="72" height="115" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Statue with the appearance of a Droplet Ninja, though the effect is closer to Big Landmine Ninja.<br>Monsters defeated in a room with this statue will explode with the power of a Big Landmine.<br>Any monsters next to the defeated monster will also explode in a chain-reaction.<br>Monsters can still drop items, but the item will vanish if it's hit by a subsequent explosion.<br>Unlike Explosion Statue, this statue won't explode when it's destroyed.<br><br>This statue makes it extremely difficult to fight monsters inside the room it's located in,<br>since Shiren will take heavy damage as a result of defeating monsters at close range,<br>especially if a chain-reaction occurs when there are multiple monsters next to Shiren.<br>Ally monsters will also explode, so caution is needed when carrying Monster Pots.<br>It may be best to assume an unknown statue in the room is this statue,<br>since it rivals No Magic and Pierce statues in terms of dangerousness.</p>
             </div>
           </div>
           <h3 id="trip">Trip Statue</h3>
