working on the statue page

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -361,35 +361,35 @@
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/trip.png" width="92" height="108" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Occasionally makes all characters in the room trip. Shiren won't trip if he has the Trapper status.<br><br>Has the potential to cause costly accidents by shattering pots or dropping items into water.<br>Traders and Water Striders might pick up your items as well, potentially leading to item loss.<br>However, monsters also drop items when tripped, so this statue can be used to collect items.<br>Traders drop merchandise instead of Vouchers when tripped, allowing you to steal items.<br>Recommended to collect items until the wind blows if you find this statue in Road to the End.</p>
             </div>
           </div>
           <h3 id="gitan">Gitan Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/gitan.png" width="78" height="88" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Defeated enemies are guaranteed to be turned into Gitan.<br>Riceball Statue will take priority if both Gitan and Riceball statues are present.<br><br>The amount of Gitan per drop isn't very large, but it can be a nice way to make money early on.<br>Can also be used to stock up on Gitan inside Storage Pots to be used as projectiles.</p>
             </div>
           </div>
           <h3 id="riceball">Riceball Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/riceball.png" width="78" height="112" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Defeated enemies are guaranteed to be turned into a Riceball.<br>The Riceball drop is separate from regular item drops, so monsters can still drop a second item.<br><br>Excellent statue that can be used to increase max fullness.<br>However, it unforunately doesn't appear in Road to the End. (Only Onigashima and Halfway Well).</p>
             </div>
           </div>
           <h3 id="sturdy_trap">Sturdy Trap Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/sturdy_trap.png" width="94" height="139" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Modeled after a Traproid monster, which don't make an appearance in Shiren 2.<br>Exclusively found in Halfway Well, and prevents all traps in the room from breaking.<br>Mallets and Piko Hammer monsters won't be able to destroy traps while inside the room either.<br>Monsters can be trapped without concern of traps breaking, so it's an excellent chance to level up.<br><br>This statue always faces downward, even when moved by items such as a Knockback Staff.<br>This is likely because Traproid monsters don't appear, and other angles aren't in the game.<br><br>Knowledge Staff cannot be found inside Halfway Well,<br>so this in-game description cannot be seen during normal play:<br><br>[Sturdy Trap Statue]<br>Most traps in the room<br>will be indestructible<br>when this statue is present.</p>
             </div>
           </div>
           <h3 id="gravity">Gravity Statue</h3>
           <div class="detail-entry">
             <img class="img_statue" src="/shiren2/image/statue/gravity.png" width="102" height="119" alt="statue">
             <div class="detail-section-1">
-            <p class="item_desc"></p>
+            <p class="item_desc">Floating monsters can be trapped when this statue is present. Exclusive to Halfway Well.<br>The statue has a nice effect, but it's often not around when you need it, so don't count on it.<br>It also only affects monsters inside the same room, so it's somewhat lackluster overall.<br>That said, you could read a Wall Collapse Scroll to make it apply to the entire floor.<br><br>Knowledge Staff cannot be found inside Halfway Well,<br>so this in-game description cannot be seen during normal play:<br><br>[Gravity Statue]<br>Floating monsters will<br>also activate traps<br>while inside a room<br>with this statue.</p>
             </div>
           </div>
         </div>
