finished statue page

--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -394,8 +394,37 @@
           </div>
         </div>
         <h3>Unused Statues</h3>
-        <p>Table</p>
-        <p>Text</p>
+        <p>These unused statues can be accessed through the debug menu.<br>However, only Item Effect Statue's effect appears to be implemented.</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Image</th>
+              <th>Name</th>
+              <th>Monster</th>
+              <th>Details</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><img class="img_statue" src="/shiren2/image/statue/unused_1.png" width="64" height="106" alt="statue"></td>
+              <td>Item Effect Statue</td>
+              <td>Bored Kappa</td>
+              <td><p>[Item Effect Statue]<br>Throw an item at this statue<br>and all monsters in the room<br>will receive the effect of<br>getting hit by that item.<br>For example, throw a<br>Flame Grass and all monsters<br>will take damage as if they<br>were hit by Flame Grass.</p></td>
+            </tr>
+            <tr>
+              <td><img class="img_statue" src="/shiren2/image/statue/unused_2.png" width="112" height="118" alt="statue"></td>
+              <td>Presto Statue</td>
+              <td>Copycat Mask</td>
+              <td>[Presto Statue]<br>Monsters that move next to<br>this statue will be transformed<br>into different monsters.</td>
+            </tr>
+            <tr>
+              <td><img class="img_statue" src="/shiren2/image/statue/unused_3.png" width="94" height="129" alt="statue"></td>
+              <td>Dummy</td>
+              <td>Tiger Tosser</td>
+              <td>[Warp Statue]<br>Not implemented.</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div id="footer" class="box footer"></div>
     </div>
