working on the castle page

--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -19,27 +19,42 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Castle</h2>
+          <p>As the story progresses, Shiren soon finds himself having to build a castle for the village.<br>Castle <a href="">Materials</a> can be found throughout Shuten Mountain, and each category comes in three grades.</p>
+          <p>The basic flow comes down to:<br><span style="color:purple;">Obtain materials in dungeons → Make castle parts at the summit → Return to the village and build.</span></p>
+          <p>Note that your save file will receive a castle icon when you complete the castle.</p>
+          <ul>
+            <li><a href="#how_to_build">How to Build</a></li>
+            <ul>
+              <li><a href="#castle_materials">Castle Materials</a></li>
+              <li><a href="#castle_parts">Castle Parts</a></li>
+              <li><a href="#oni_attacks">Oni Attacks</a></li>
+            </ul>
+            <li><a href="#post_completion">Post-Completion</a></li>
+            <ul>
+              <li><a href="#castle_decorations">Castle Decorations</a></li>
+              <li><a href="#changing_parts">Changing Parts・Golden Castle</a></li>
+              <li><a href="#quick_golden_castle">Quickly Building a Golden Castle</a></li>
+            </ul>
+          </ul>
+          <h2 id="how_to_build">How to Build</h2>
           <p>Text</p>
-          <p>Quick Links</p>
-          <h2>How to Build</h2>
-          <p>Text</p>
-          <h3>Castle Materials</h3>
+          <h3 id="castle_materials">Castle Materials</h3>
           <p>Text</p>
           <p>Table</p>
           <p>Text</p>
-          <h3>Castle Parts</h3>
+          <h3 id="castle_parts">Castle Parts</h3>
           <p>Text</p>
           <p>Table</p>
           <p>Text</p>
-          <h3>Oni Attacks</h3>
+          <h3 id="oni_attacks">Oni Attacks</h3>
           <p>Text</p>
-          <h2>Post-Completion</h2>
+          <h2 id="post_completion">Post-Completion</h2>
           <p>Text</p>
-          <h3>Castle Decorations</h3>
+          <h3 id="castle_decorations">Castle Decorations</h3>
           <p>Text</p>
-          <h3>Changing Parts・Golden Castle</h3>
+          <h3 id="changing_parts">Changing Parts・Golden Castle</h3>
           <p>Text</p>
-          <h3>Quickly Building a Golden Castle</h3>
+          <h3 id="quick_golden_castle">Quickly Building a Golden Castle</h3>
           <dl>
             <dt>Necessary Items</dt>
             <dd>
